--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -2,6 +2,9 @@
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["prompt_catalog_mcp"]
+
 [project]
 name = "prompt-catalog"
 version = "1.0.0"
