test: add E2E UX tests with LLM judge evaluations
- 49 deterministic tests: help, list, search, show, kit, validate, start
- 12 LLM judge eval tests: qualitative assessment via OpenAI (gated behind JUDGE_EVAL=1)
- judge_eval.py: reusable judge module with pre-built rubrics
- Tests run against the real catalog, not fixtures
- Add openai as optional 'judge' dependency in pyproject.toml

--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -38,6 +38,9 @@ dev = [
     "pytest>=8.0",
     "pytest-asyncio>=0.23",
 ]
+judge = [
+    "openai>=1.0",
+]
 
 [project.scripts]
 prompt-catalog = "prompt_catalog_mcp.cli:main"
