chore: suppress scoped false-positive warnings in publish.yml and judge_eval.py

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,7 +37,7 @@ jobs:
     name: Publish to PyPI
     needs: test
     runs-on: ubuntu-latest
-    environment: pypi
+    environment: pypi  # yamllint disable-line rule:truthy
 
     steps:
       - uses: actions/checkout@v4
