Improve catalog: add logging, CI schema validation, and 4 new prompts
- catalog.py: Replace silent exception swallowing with logger.warning()
- ci.yml: Add dedicated schema-validation job with JSON schema checks
- Add OPS-INC-001 (Incident Response and Runbook Design)
- Add OPS-CAP-001 (Capacity Planning and Scaling Strategy)
- Add TEST-PERF-001 (Performance Testing Strategy and Execution)
- Add TEST-SEC-001 (Security Testing Strategy)
- Update index.json: statistics, chain sequences, new prompt entries
- Update README badge (35 -> 38 prompts)
- Update OPS-MON-001 chain_position to link to new operations prompts

--- a/prompts/operations/ops-mon-001.yaml
+++ b/prompts/operations/ops-mon-001.yaml
@@ -149,8 +149,8 @@ anti_patterns:
   - "Missing distributed tracing in microservices"
   - "No SLO definitions"
 
-related_prompts: ["DEPLOY-CICD-001", "DEPLOY-IAC-001", "ARCH-CLOUD-001"]
+related_prompts: ["OPS-INC-001", "OPS-CAP-001"]
 
 chain_position:
   previous: ["DEPLOY-CICD-001", "DEPLOY-IAC-001"]
-  next: []
+  next: ["OPS-INC-001", "OPS-CAP-001"]
